# Nesting

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
NestingLib/: CMakeLists.txt
NestingLib/Source/: Guid.cpp
NestingLib/include/Nesting/: Guid.h  Nesting.h  NestingJob.h  NestingResult.h  Random.h  Serialization.h
NestingProgram/: CMakeLists.txt  main.cpp
NestingProgram/SampleJobs/: NestingJob_0.json  NestingJob_1.json  NestingJob_2.json  NestingJob_3.json  NestingJob_4.json
NestingProgram/Utils/: Utils.cpp  Utils.h
